# tfds_project

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  app_test.py  pyproject.toml
data/: charts_owid.csv
data/vectorstore/5f3a4517-8dff-4fe8-bf06-4ab5897d662b/: index_metadata.pickle
tests/: 20240702 - CQA - Graph Functionality.ipynb
tests/faiss_index/: index.pkl
tfds_project/: utils.py
tfds_project/engine/: embeddings.py  graph.py  graph_retriever.py  reranker.py
tfds_project/engine/chains/: graph_retriever_node.py  intent_categorization.py  prompts.py  query_transformation.py  reformulation.py  set_defaults.py  translation.py
tfds_project/engine/llm/: __init__.py  azure.py  openai.py
